k8s/demo-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-site
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: demo-site
  ports:
    - port: 80
      targetPort: 8080
